src/FinancialForce Central/objects/Event__c.object
<CustomObject>
    <description>Holds Financial Force Events, News and Blogs...</description>
    <fields>
        <fullName>DateCreated__c</fullName>
        <label>DateCreated</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <label>Link</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartTime__c</fullName>
        <label>Start Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ThumbnailLargeURI__c</fullName>
        <label>Thumbnail Large URI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ThumbnailSmallURI__c</fullName>
        <label>Thumbnail Small URI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BLOG</fullName>
                </value>
                <value>
                    <fullName>NEWS</fullName>
                </value>
                <value>
                    <fullName>EVENT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Event</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Type__c</columns>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>StartDate__c</columns>
        <columns>StartTime__c</columns>
        <columns>ThumbnailLargeURI__c</columns>
        <columns>ThumbnailSmallURI__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Events Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>